# PP-OCR

./: README.md
doc/: QCS6490-PPOCR on  RB3G2.docx
pp-ocr/: build.sh  run.sh
pp-ocr/src/: CMakeLists.txt
